--- a/master.css
+++ b/master.css
@@ -105,6 +105,14 @@ body {
   width: 80%;
 }
 
+.about a {
+  color: #B00;
+  text-decoration: none;
+}
+.about a:hover{
+  color: #FFF;
+}
+
 
 .social img{
   width: 40px;
@@ -200,7 +208,7 @@ body {
 }
 
 .copyright p{
-  color: #303030;
+  color: #505050;
   font-family: Montserrat;
   font-weight: 200;
   position: relative;
