--- a/master.css
+++ b/master.css
@@ -182,7 +182,7 @@ body {
   margin-left: 10%;
   background: rgba(0,0,0, 0.8);
   width: 100%;
-  height: 100%;
+  height: 400px;
   max-height: 500px;
   color: #BBB;
 }
@@ -213,4 +213,132 @@ body {
   font-weight: 200;
   position: relative;
   font-size: 16pt;
+}
+
+.hamburger {
+  display: none;
+}
+.dropdown-content{
+  display:none;
+}
+@media only screen and (max-width: 900px) {
+
+  .about-container {
+    background: #101010;
+    width: 100%;
+    float: left;
+    display: block;
+    position: fixed;
+    top: 0px;
+    z-index: 100000000;
+  }
+  .about-description{
+
+
+  }
+  #me {
+    height: 80px;
+    width: 80px;
+    margin: 20px;
+    float: left;
+  }
+
+  .about-container h1 {
+    float: left;
+    font-size: 24px;
+    width: auto;
+    margin: 46px auto 45px 10px;
+
+  }
+
+  .about-container p {
+    display: none;
+  }
+  .nav-buttons{
+    z-index: 100000;
+    width: 120px;
+    float: right;
+  }
+  .nav-buttons button {
+    width: 70px;
+    border: none;
+    background: none;
+  }
+  .nav-buttons button:hover {
+    border: none;
+    background: none;
+  }
+  .btn {
+    display: none;
+  }
+  .hamburger {
+
+    display: block;
+  }
+
+  .socialbar {
+    position: absolute;
+    top: 240px;
+    float: left;
+    width: 40px;
+  }
+  .about,  #about, #skills , #projects{
+    z-index: 0;
+    position: absolute;
+    width: 100%;
+    padding-top: 120px;
+    right: auto;
+    float: left;
+    display: block;
+    visibility: visible;
+    height: 600px;
+  }
+  .about h1 {
+    display: block;
+    width: 400px;
+    margin: 40px auto 80px 60px;
+  }
+
+  #skills {
+
+    top: 600px;
+    left: 0px;
+  }
+  #projects {
+    top: 1320px;
+    height: 100%;
+  }
+
+  .window {
+    max-width: 500px;
+    margin-left: 50px;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #202020DD;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1200000;
+    top: 120px;
+    left: 0px;
+    width: 100%;
+
+  }
+
+  .dropdown-content a {
+    float: none;
+    color: #EEE;
+    padding:18px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    border-bottom: 1px solid #303030DD;
+    font-family: Ubuntu, sans-serif;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #AA3030;
+  }
 }
