--- a/master.css
+++ b/master.css
@@ -1,12 +1,7 @@
-/*{
-border:1px solid red;
-}*/
 
 html,
 body {
   display: flex;
-
-
   width: 100%;
   height: 100%;
   margin:0;
@@ -20,81 +15,60 @@ body {
   height: 100%;
   margin: 0 auto;
   z-index: 0;
-  position: absolute;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
-/*LEFT CONTAINER ELEMENTS*/
-.about-container {
-  align-items: center;
+
+.top-bar {
   text-align: center;
-  position:absolute;
-  width: 40%;
+  position:fixed;
+  top: 0px;
+  left: 0px;
+  display: block;
+  width: 100%;
+  background: #202020;
+  z-index: 100;
+  height: 80px;
 }
-#me {
-  width: 200px;
+#me-top {
+  width: 40px;
   border-radius: 50%;
-  margin-bottom: 50px;
-  margin-top: 100px;
+  margin: 20px 20px;
+  float: left;
 }
-.about-description h1{
+.top-bar h1 {
+  float: left;
   font-family: Montserrat;
-  color: #D5D5D5;
-  font-size: 39.5pt;
-  width: 80%;
-  display:inline-block;
+  color: #AAA;
+  font-size: 30px;
+  margin:21.5px 0;
 }
-.about-description p{
-  width: 80%;;
-  font-family: Montserrat;
-  font-size: 18pt;
-  color: #CCC;
-  margin-bottom: 50px;
-  display: inline-block;
-}
-.nav-buttons button {
-  background: rgba(0,0,0,0.8);
-  color: #606060;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  font-size: 18pt;
-  font-family: Montserrat;
-  font-weight: 200;
-  border: 1px solid #606060;
-  transition: .4s;
-  width: 200px;
-  margin: 25px;
-  border-radius: 10px;
-}
-.nav-buttons button:hover{
-  color:#BBB;
-  border: 1px solid #BBB;
-}
-
-.nav-buttons button:focus{
-  color:#B00;
-  border: 1px solid #BBB;
-  outline:none;
-}
-
 
 .about {
-  position:absolute;
-  top: auto;
-  right: 0px;
-  visibility: hidden;
-  width: 60%;
+  position:relative;
+  display:block;
+  float: left;
+  min-width: 100%;
+  padding-top: 100px;
 }
-#about {
-  visibility: visible;
+#about img {
+  float: left;
+  width: 20%;
+  margin: 0px 10% 10% 10%;
+  border-radius: 50%;
 }
+
 .about h1{
   font-family: Montserrat;
   font-weight: 400;
   color: #BBB;
   font-size: 36pt;
-  margin-top: 200px;
+  margin-top: 100px;
   margin-left: 10%;
-  margin-bottom: 130px;
-  width: 80%;
+  margin-bottom: 90px;
+  width: 90%;
+  display: block;
 }
 .about p {
   font-family: Montserrat;
@@ -103,6 +77,7 @@ body {
   color: #CCC;
   margin-left: 10%;
   width: 80%;
+  display: block;
 }
 
 .about a {
@@ -134,7 +109,7 @@ body {
   background: rgba(0,0,0,0.8);
 }
 .imgcontainer img {
-  z-index: 100;
+  z-index: 0;
   width: 180px;
   position: absolute;
   padding: 10px;
@@ -177,9 +152,12 @@ body {
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
   border: 1px solid #555;
-  max-width: 700px;
+  width: 80%;
+  min-width: 500px;
+  max-width: 650px;
   box-shadow: 0 20px 70px rgba(9, 9, 9, 0.55);
-  margin-left: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
   background: rgba(0,0,0, 0.8);
   width: 100%;
   height: 400px;
@@ -215,130 +193,31 @@ body {
   font-size: 16pt;
 }
 
-.hamburger {
+
+
+.dropdown-content {
   display: none;
+  position: absolute;
+  background-color: #202020DD;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 100;
+  top: 80px;
+  width: 100%;
+
 }
-.dropdown-content{
-  display:none;
+
+.dropdown-content a {
+  float: none;
+  color: #EEE;
+  padding:18px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  border-bottom: 1px solid #303030DD;
+  font-family: Ubuntu, sans-serif;
 }
-@media only screen and (max-width: 900px) {
 
-  .about-container {
-    background: #101010;
-    width: 100%;
-    float: left;
-    display: block;
-    position: fixed;
-    top: 0px;
-    z-index: 100000000;
-  }
-  .about-description{
-
-
-  }
-  #me {
-    height: 80px;
-    width: 80px;
-    margin: 20px;
-    float: left;
-  }
-
-  .about-container h1 {
-    float: left;
-    font-size: 24px;
-    width: auto;
-    margin: 46px auto 45px 10px;
-
-  }
-
-  .about-container p {
-    display: none;
-  }
-  .nav-buttons{
-    z-index: 100000;
-    width: 120px;
-    float: right;
-  }
-  .nav-buttons button {
-    width: 70px;
-    border: none;
-    background: none;
-  }
-  .nav-buttons button:hover {
-    border: none;
-    background: none;
-  }
-  .btn {
-    display: none;
-  }
-  .hamburger {
-
-    display: block;
-  }
-
-  .socialbar {
-    position: absolute;
-    top: 240px;
-    float: left;
-    width: 40px;
-  }
-  .about,  #about, #skills , #projects{
-    z-index: 0;
-    position: absolute;
-    width: 100%;
-    padding-top: 120px;
-    right: auto;
-    float: left;
-    display: block;
-    visibility: visible;
-    height: 600px;
-  }
-  .about h1 {
-    display: block;
-    width: 400px;
-    margin: 40px auto 80px 60px;
-  }
-
-  #skills {
-
-    top: 600px;
-    left: 0px;
-  }
-  #projects {
-    top: 1320px;
-    height: 100%;
-  }
-
-  .window {
-    max-width: 500px;
-    margin-left: 50px;
-  }
-
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #202020DD;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1200000;
-    top: 120px;
-    left: 0px;
-    width: 100%;
-
-  }
-
-  .dropdown-content a {
-    float: none;
-    color: #EEE;
-    padding:18px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    border-bottom: 1px solid #303030DD;
-    font-family: Ubuntu, sans-serif;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #AA3030;
-  }
+.dropdown-content a:hover {
+  background-color: #AA3030;
 }
